Changed icon from SF to FV

--- a/app/satisfy.html
+++ b/app/satisfy.html
@@ -9,7 +9,7 @@
 <body>
   <svg id="mySvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
     <circle cx="100" cy="100" r="75" fill="black"/>
-    <text x="100" y="130" font-family="'Comic Neue', sans-serif" font-size="80" font-weight="bold" text-anchor="middle" fill="white">SF</text>
+    <text x="100" y="130" font-family="'Comic Neue', sans-serif" font-size="80" font-weight="bold" text-anchor="middle" fill="white">FV</text>
   </svg>
   <br>
   <button onclick="exportSVG()">Export as PNG</button>
